// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiToolTip display prop renders block 1`] = `
<span
  class="euiToolTipAnchor euiToolTipAnchor--displayBlock"
>
  <button>
    Trigger
  </button>
</span>
`;

exports[`EuiToolTip is rendered 1`] = `
<span
  class="euiToolTipAnchor"
>
  <button>
    Trigger
  </button>
</span>
`;

exports[`EuiToolTip shows tooltip on focus 1`] = `"<div data-euiportal=\\"true\\"><div class=\\"euiToolTipPopover euiToolTip euiToolTip--top testClass1 testClass2\\" style=\\"top: 50px; left: 50px; opacity: 0; visibility: hidden;\\" id=\\"id\\" role=\\"tooltip\\" aria-label=\\"aria-label\\" data-test-subj=\\"tooltip\\" position=\\"top\\"><div class=\\"euiToolTip__title\\">title</div><div class=\\"euiToolTip__arrow\\"></div><div>content</div></div></div>"`;
